# f3_gfx

./: Cargo.toml
examples/basics/: main.rs
examples/basics/first_back/: geom_man.rs  mod.rs  scene_man.rs  tex_man.rs
examples/basics/second_back/: geom_man.rs  mod.rs  scene_man.rs  tex_man.rs
src/: backend.rs  error.rs  geometry.rs  lib.rs  loading_tex.rs  request.rs  resource_loader.rs  scene.rs  task.rs  tasker.rs  tex.rs  tex_unloader.rs  texture.rs
src/back/: error.rs  man_geom.rs  man_scene.rs  man_tex.rs  mod.rs
src/managers/: geom.rs  mod.rs  scene.rs  tex.rs
