[package]
name = "f3_gfx"
version = "0.1.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.5"
log = "0.4.11"

[dependencies.tokio]
version = "0.2.22"
features = ["rt-core"]